<resources>
    <string name="app_name">ProyectoBuy4You</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="cantidad_articulos">Cantidad articulos: </string>
    <string name="cantidad">Cantidad: </string>
    <string name="tot_compra">Total compra: </string>
    <string name="total">Total: </string>
    <string name="placeholder">placeholder</string>
    <string name="empty_cart">No tienes ningun articulo en tu carrito</string>
    <string name="button_comprar_prod">Agregar al carrito</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="firstname">Nombres: </string>
    <string name="lastname">Apellidos: </string>
    <string name="buttonprofile">Modificar Datos</string>
    <string name="vermas">Ver mas</string>
    <string name="profile">Perfil</string>
    <string name="email">Email: </string>
    <string name="hintemail">Introduzca su Email</string>
    <string name="hintfirtname">Ingrese sus nombres</string>
    <string name="hintlastname">Ingrese sus apellidos</string>
    <string name="hintusername">Ingrese su nuevo usuario</string>
    <string name="hintpassword">Ingrese se nueva contraseña</string>
    <string name="hintconfpassword">Confirme su nueva contraseña</string>
    <string name="hintcurrentpass">Ingrese su contraseña actual</string>
    <string name="currentpass">Contraseña actual: </string>
    <string name="newpass">Nueva contraseña: </string>
    <string name="confpass">Confirmar contraseña: </string>
    <string name="ver">Ver</string>
    <string name="id">Id:</string>
    <string name="tel">Tel:</string>
    <string name="ubicacion">Ver ubicación</string>
    <string name="precio">Precio: </string>
    <string name="productoeditar">Editar Producto</string>
    <string name="productoborrar">Borrar Producto</string>
    <string name="hintnombreprod">Nombre producto</string>
    <string name="hintdescproducto">Descripcion Producto</string>
    <string name="hintcantidadprod">Inventario</string>
    <string name="hintprecioprod">Precio</string>
    <string name="hintcategoriaprod">Categoria: </string>

    <string name="product_image_desc">Imagen Producto </string>
    <string name="confirmar">Confirmar</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
