<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/emptycart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/empty_cart"/>

        <LinearLayout
            android:id="@+id/itemscart_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp"
                android:id="@+id/cart_card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/cantidad_articulos"
                                android:textColor="@android:color/black"/>

                            <TextView
                                android:id="@+id/cantidadarticulos_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:padding="5dp"
                                android:text="@string/placeholder"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/tot_compra"
                                android:textColor="@android:color/black"
                                android:gravity="center_vertical"/>

                            <TextView
                                android:id="@+id/totalcompra_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:padding="5dp"
                                android:text="@string/placeholder"
                                android:drawableStart="@drawable/ic_attach_money_black_24dp"
                                android:gravity="center_vertical"/>

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/confirmarcompra_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:text="@string/confirmar"
                        android:layout_gravity="center"
                        android:textColor="@android:color/white"
                        android:background="@drawable/roundobjectblue"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/productoscart_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>